[project]
name = "planpilotassistant"
version = "0.1.0"
description = ""
authors = [
    {name = "oldwilly12",email = "rwilly203@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "jupyterlab (>=4.5.0,<5.0.0)",
    "langchain (>=1.0.8,<2.0.0)",
    "langchain-openai (>=1.0.3,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "planpilotassistant", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
